[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/FinishScreen.gd" type="Script" id=2]
[ext_resource path="res://Audio/Completing Sting.wav" type="AudioStream" id=3]

[node name="FinishScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -453.0
margin_top = -409.0
margin_right = 1121.0
margin_bottom = 720.0
color = Color( 0.0980392, 0.0901961, 0.0862745, 0.882353 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 480.0
margin_bottom = 274.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 206.0
margin_top = 105.0
margin_right = 274.0
margin_bottom = 169.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 68.0
margin_bottom = 13.0
text = "Finished"
align = 1
uppercase = true

[node name="Next" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 68.0
margin_bottom = 30.0
text = "Next Level"

[node name="Restart" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 68.0
margin_bottom = 47.0
text = "Restart"

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 68.0
margin_bottom = 64.0
text = "Main Menu"

[node name="CompletedAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="button_down" from="CenterContainer/VBoxContainer/Next" to="." method="_on_Next_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_button_down"]
